--- a/.github/workflows/openapi-generator.yaml
+++ b/.github/workflows/openapi-generator.yaml
@@ -80,44 +80,44 @@ jobs:
           name: surefire-test-results
           path: '**/surefire-reports/TEST-*.xml'
 
-  documentation:
-    name: Docs up-to-date
-    runs-on: ubuntu-latest
-    needs:
-      - build
-    steps:
-      - uses: actions/checkout@v3
-      - name: Set up JDK 8
-        uses: actions/setup-java@v3
-        with:
-          java-version: 8
-          distribution: 'temurin'
-      - name: Download openapi-generator-cli.jar artifact
-        uses: actions/download-artifact@v3
-        with:
-          name: openapi-generator-cli.jar
-          path: modules/openapi-generator-cli/target
-      - name: Generate docs
-        run: |
-          bash bin/meta-codegen.sh
-          bash bin/utils/export_docs_generators.sh
-          bash bin/utils/copy-to-website.sh
-          bash bin/utils/export_generators_readme.sh
-      - name: Verify git status
-        run: |
-          if [[ "$(git status --porcelain)" != "" ]]; then
-            echo "UNCOMMITTED CHANGES ERROR"
-            echo "There are uncommitted changes in working tree after execution of 'bin/ensure-up-to-date'"
-            echo "Perform git diff"
-            git --no-pager diff
-            echo "Perform git status"
-            git status
-            echo -e "\nThis script runs in pull requests against the anticipated merge commit (as if the PR was merged now)."
-            echo "When you see unexpected files here, it likely means that there are newer commits in master that you need to "
-            echo -e "rebase or merge into your branch.\n"
-            echo "Please run 'bin/utils/ensure-up-to-date' locally and commit changes (UNCOMMITTED CHANGES ERROR)"
-            exit 1
-          fi
+  # documentation:
+  #   name: Docs up-to-date
+  #   runs-on: ubuntu-latest
+  #   needs:
+  #     - build
+  #   steps:
+  #     - uses: actions/checkout@v3
+  #     - name: Set up JDK 8
+  #       uses: actions/setup-java@v3
+  #       with:
+  #         java-version: 8
+  #         distribution: 'temurin'
+  #     - name: Download openapi-generator-cli.jar artifact
+  #       uses: actions/download-artifact@v3
+  #       with:
+  #         name: openapi-generator-cli.jar
+  #         path: modules/openapi-generator-cli/target
+  #     - name: Generate docs
+  #       run: |
+  #         bash bin/meta-codegen.sh
+  #         bash bin/utils/export_docs_generators.sh
+  #         bash bin/utils/copy-to-website.sh
+  #         bash bin/utils/export_generators_readme.sh
+  #     - name: Verify git status
+  #       run: |
+  #         if [[ "$(git status --porcelain)" != "" ]]; then
+  #           echo "UNCOMMITTED CHANGES ERROR"
+  #           echo "There are uncommitted changes in working tree after execution of 'bin/ensure-up-to-date'"
+  #           echo "Perform git diff"
+  #           git --no-pager diff
+  #           echo "Perform git status"
+  #           git status
+  #           echo -e "\nThis script runs in pull requests against the anticipated merge commit (as if the PR was merged now)."
+  #           echo "When you see unexpected files here, it likely means that there are newer commits in master that you need to "
+  #           echo -e "rebase or merge into your branch.\n"
+  #           echo "Please run 'bin/utils/ensure-up-to-date' locally and commit changes (UNCOMMITTED CHANGES ERROR)"
+  #           exit 1
+  #         fi
 
   samples:
     name: Samples up-to-date
